--- a/.browse/setup/style.css
+++ b/.browse/setup/style.css
@@ -149,6 +149,11 @@
 .image select{
   width:75%
 }
+.switch{
+  width:32px;
+  height:32px;
+  margin:4px;
+  }
 .item-bar{
   position:absolute;
   margin-top:-24px;
