--- a/.browse/.browse/root/style.css
+++ b/.browse/.browse/root/style.css
@@ -13,10 +13,44 @@ body{
   height:100%;
   background:#8596A5 url('.browse/images/background_root.png') repeat-y;
   }
-#content{
-  margin-left:1%;
-  width:99%;
+#layout{
+  border-spacing:0;
+  border-collapse:collapse;
+  empty-cells:show;
+  width:100%;
+  height:100%;
   }
+#interface {
+  position: absolute;
+  top:0;
+  left:0;
+  width:100%;
+  height:100%
+  }
+#content{
+  margin:auto;
+  height:88%;
+  position:absolute;
+  overflow:auto;
+  }
+#cell001{
+  width:10%;
+  height:10%;
+}
+#cell016{
+  width:80%;
+  position:relative;
+  vertical-align:top;
+  }
+#cell128{
+  vertical-align:top;
+  text-align:center;
+  text-shadow: 2px 2px #000000
+}
+#cell256{
+  width:10%;
+  height:5%;
+}
 #setup_switch{
   z-index:1;
   position:fixed;
@@ -33,7 +67,7 @@ body{
   text-align:center;
   width:18.1%;
   height:176px;
-  margin:2px;
+  margin:0px;
   border-radius:8px;
   border-top:2px solid silver;
   border-left:1px solid silver;
