--- a/.browse/.browse/root/style.css
+++ b/.browse/.browse/root/style.css
@@ -11,7 +11,7 @@ html{
 body{
   width:100%;
   height:100%;
-  background:#8596A5 url('.browse/images/background_root.png') repeat-y;
+  background:#8596A5;
   }
 #layout{
   border-spacing:0;
@@ -60,23 +60,32 @@ body{
   width:32px;
   height:32px
   }
+#hide_scrollbar{
+  position:absolute;
+  right:0px;
+  top:-4px;
+  height:95%;
+  width:18px;
+  z-index:1;
+  background:#8596A5;
+}
 .folder, .file{
-  background:#556677;
+  background:#99AAAA;
   position:relative;
   float:left;
   text-align:center;
   width:18.1%;
+  min-width:176px;
   height:176px;
   margin:0px;
   border-radius:8px;
-  border-top:2px solid silver;
-  border-left:1px solid silver;
-  border-right:3px solid #999999;
-  border-bottom:5px solid #666666;
+  border-top:2px solid #EEEEEE;
+  border-left:1px solid #BBBBBB;
+  border-right:3px solid #666666;
+  border-bottom:5px solid #333333;
   padding:4px;
   }
 .file{
-  background:url(".browse/images/file_background.png");
   }
 .folder img{
   width:100%;
@@ -86,3 +95,7 @@ body{
   width:75%;
   height:100%;
   }
+button.navi{
+  font-size:1em;
+  width:32%;
+}
