--- a/.browse/.browse/setup/style.css
+++ b/.browse/.browse/setup/style.css
@@ -5,7 +5,7 @@
   text-shadow:  0px 2px #333333
   }
 #background {
-  background:#000000 url(".browse/images/background.jpg") center bottom;
+  background:#000000;
   overflow:hidden;
   }
 #wallpaper {
@@ -120,22 +120,25 @@
   }
 
 .folder{
+  margin:2px;
+  position:relative;
+  border:2px solid #AAAAAA;
+  border-radius: 8px;
   width:128px;
   height:128px;
   float:left;
-  background:url(".browse/images/folder_background.png") no-repeat top center;
   text-align:center;
-  padding-top:32px;
   }
 .file{
+  background:#CCCCCC;
+  margin:2px;
   position:relative;
+  border:2px solid #AAAAAA;
+  border-radius: 8px;
   width:192px;
   height:128px;
   float:left;
-  background:url(".browse/images/file_background.png") no-repeat top center;
   text-align:center;
-  border-radius:12px;
-  opacity: 0.6;
   }
 .image{
   opacity: 1;
@@ -144,8 +147,6 @@
 .image img{
   width:100%;
   height:100%;
-  position:relative;
-  opacity:1;
   }
 .image select{
   width:75%
@@ -197,12 +198,6 @@
   vertical-align:middle;
   width:32px;
   height:24px;
-  }
-#menu input[type="submit"]{
-  background:url(".browse/images/search-button.png") no-repeat center center transparent;
-  border:0;
-  width:32px;
-  height:32px;  
   }
 #submit_images {
   float:right;
